--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Trang học sinh
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <script>
+        fetch('https://frozen-peak-89545-4e31db2f4b66.herokuapp.com/students')
+            .then(response => response.json())
+            .then(data => console.log(data))
+            .catch(error => console.error('There was a problem with your fetch operation:', error));
+
+    </script>
+</body>
+
+</html>
